# my-rts-game

./: .gitattributes  Cargo.toml  README.md  TODO.md  build.rs  index.html
.github/: dependabot.yml
.github/workflows/: build-release.yml  test-build-release.yml
assets/: autolayout.aseprite  chest1.aseprite  common.aseprite  conche.aseprite  door1.aseprite  empty_slot.aseprite  gather_effect.aseprite  gold.aseprite  grass.aseprite  house.aseprite  jungleman.aseprite  mine.aseprite  quarry.aseprite  rough_floor.aseprite  splashscreen1.aseprite  stone.aseprite  terrain2.aseprite  test-map.ldtk  tree.aseprite  tree2.aseprite  unknown.aseprite  wall1.aseprite  warrior.aseprite  worker.aseprite
assets/effects/: gather_effect.xcf
assets/ldtk/: my-rts-game-ldtk154.ldtk  my-rts-game.ldtk
assets/resources/: empty_slot.xcf  gold.xcf  stone.xcf  unknown.xcf  wood.xcf
assets/tiled/: my-rts-game.tiled-session  (+4 more)
docs/: contributors.md  maps.md  rules.md  todo.md
main/: my-rts-game.d.ts  my-rts-game.js  my-rts-game_bg.wasm.d.ts
pr-39/: my-rts-game.d.ts
pr-41/: my-rts-game_bg.wasm.d.ts
pr-42/: my-rts-game.js
pr-43/: my-rts-game_bg.wasm.d.ts
pr-45/: my-rts-game.d.ts
pr-46/: my-rts-game.d.ts  my-rts-game.js
pr-47/: my-rts-game.js
pr-48/: my-rts-game_bg.wasm.d.ts
pr-51/: my-rts-game.d.ts  my-rts-game.js  my-rts-game_bg.wasm.d.ts
pr-52/: my-rts-game.d.ts  my-rts-game.js  my-rts-game_bg.wasm.d.ts
pr-53/: my-rts-game.d.ts  my-rts-game.js  my-rts-game_bg.wasm.d.ts
pr-55/: my-rts-game.js
pr-59/: my-rts-game.d.ts  my-rts-game.js
pr-61/: my-rts-game_bg.wasm.d.ts
pr-62/: my-rts-game.d.ts  my-rts-game.js  my-rts-game_bg.wasm.d.ts
pr-63/: my-rts-game.d.ts  my-rts-game.js  my-rts-game_bg.wasm.d.ts
pr-67/: my-rts-game_bg.wasm.d.ts
pr-69/: my-rts-game.d.ts  my-rts-game.js  my-rts-game_bg.wasm.d.ts
pr-71/: my-rts-game_bg.wasm.d.ts
pr-72/: my-rts-game.d.ts  my-rts-game.js  my-rts-game_bg.wasm.d.ts
pr-73/: my-rts-game_bg.wasm.d.ts
pr-75/: my-rts-game.js
pr-79/: my-rts-game.d.ts  my-rts-game.js  my-rts-game_bg.wasm.d.ts
src/: assets.rs  entities.rs  main.rs  plugin.rs  resources.rs
(+103 files in other folders)
