[package]
name = "my-rts-game"
version = "0.1.0"
edition = "2021"

[profile.ci]
inherits = "release"
debug = false
opt-level = 2
codegen-units = 16
lto = "thin"

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_asset",
    "bevy_sprite", 
    "bevy_ui",
    "bevy_text",
    "bevy_render",
    "bevy_core_pipeline",
    "default_font"  # Note: singular "font", not "fonts"
]}
