[package]
name = "my-rts-game"
version = "0.1.0"
edition = "2021"

[profile.ci]
inherits = "release"
debug = false
opt-level = 1
codegen-units = 16
lto = "off"  # Must be explicitly off to work with prefer-dynamic on Windows

[profile.release-optimized]
inherits = "release"
debug = false
opt-level = 3
codegen-units = 1
lto = "fat"  # Full optimization for actual releases

[dependencies]
bevy = { version = "0.15", features = ["png", "gif"] }
wgpu = "=0.17.1"
image = "0.25"
winit = "0.30"

[build-dependencies]
winres = "0.1"
