[package]
name = "my-rts-game"
version = "0.1.0"
edition = "2021"

[profile.ci]
inherits = "release"
debug = false
opt-level = 1
codegen-units = 16
lto = "off"  # Must be explicitly off to work with prefer-dynamic on Windows

[profile.release-optimized]
inherits = "release"
debug = false
opt-level = 3
codegen-units = 1
lto = "fat"  # Full optimization for actual releases

[dependencies]
bevy = { version = "0.15", features = ["png", "gif"] }
wgpu = ">0.19.0"
image = "0.25"
winit = "0.30"
bevy_ecs_ldtk = "0.11"
bevy-inspector-egui = "0.30"
pathfinding = "4.3.0"
bevy_kira_audio =  { version = "0.22", features = ["mp3"] }
bevy_aseprite_ultra = { version = "0.4.1" }

[build-dependencies]
winres = "0.1"

[lints.clippy]
# Disable specific clippy lints that are too strict for Bevy patterns:
# - type_complexity: Bevy's ECS queries often require complex type signatures with multiple components
type_complexity = "allow"
# - too_many_arguments: Bevy systems frequently need access to many different resources and queries
too_many_arguments = "allow"
